add simple vibe-coded backend
very basic and incomplete but should be ok as a scaffold
everything is async, there's a cli client for testing
test_client is disfunctional but not required really (client itself is
meant only for system tests, covering it was a long shot)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# local stuff
+src/key_event_recorder.egg-info
+collected_data
+failed_attempts
+sessions
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
