--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,3 +1,22 @@
-- uses: astral-sh/ruff-action@v3
-  with:
-    src: "./src"
+name: ruff
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # Required for some coverage actions
+
+    - uses: astral-sh/ruff-action@v3
+      with:
+        src: "./src"
