add explicit ruff commands

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -20,3 +20,7 @@ jobs:
     - uses: astral-sh/ruff-action@v3
       with:
         src: "./src"
+
+    - run: ruff check --fix
+
+    - run: ruff format
