--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,15 +18,21 @@ jobs:
         fetch-depth: 0 # Required for some coverage actions
 
     - name: Set up Python 3.12
-      uses: actions/setup-python@v5
-      with:
+    - name: Enable caching
+      uses: astral-sh/setup-uv@v6
+        with:
+        enable-cache: true
         python-version: '3.12' # Specify your desired Python version
+
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e .[dev] -r requirements.txt
+        uv pip install -e .[dev] -r requirements.txt
 
     - name: Run Pytest tests
       run: |
-        pytest --cov=src --cov-report=xml # Run tests with coverage and generate an XML report
+        uv run pytest --cov=src --cov-report=xml # Run tests with coverage and generate an XML report
+
+    - name: Minimize uv cache
+      run: |
+        uv cache prune --ci
