--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,6 +26,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        uv venv
         uv pip install -e .[dev] -r requirements.txt
 
     - name: Run Pytest tests
